# cat-context

./: .gitignore  Dockerfile.test  Makefile  README.md  pbcopy  setup.cfg
.github/workflows/: publish.yml  test.yml
ctx/: main.py
src/: file_content.py  file_tree.py  main.py
tests/: test_cli.py
