[metadata]
name = ctx
version = 1.0.0
author = Alexandre Nunes
author_email = alexandrenunes@poli.ufrj.br
description = A command-line tool to print file trees and display file contents.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asnunes/ctx
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
python_requires = >=3.7

[options.entry_points]
console_scripts =
    ctx = ctx.main:main